# pmk-sumatra-static

./: .dockerignore  .gitignore  .replit  Dockerfile  README.md  darurat-data-retrieve.sh  docker-build.sh  docker-compose.yml  docker-deploy.sh  docker-deployment.md  docker-production.sh  news-editor.html  next.config.ts  package-lock.json  package.json  replit.md  scheduled-update.sh  server-deployment.md  server.js  update_news.md
attached_assets/: Emergency_Contact_Website_Bencana_-_Sheet1_1765349673485.csv  Pasted--last-update-11-Desember-2025-pukul-18-45-data-stok-mak_1765463583913.txt  Pasted--last-update-9-Desember-2025-15-24-items-name-ABON-quan_1765270138899.txt  Pasted--last-update-9-Desember-2025-pukul-11-16-items-nama-bar_1765254802355.txt  Pasted--last-update-9-Desember-2025-pukul-22-59-logistik-makan_1765339066539.txt  Pasted--no-1-title-Pimpin-Ratas-Penanganan-Bencana-Presiden-In_1765254075101.txt  Pos_Pengungsian_Bencana_Sumatra_-_Aceh_1765321492009.csv  Pos_Pengungsian_Bencana_Sumatra_-_Sumatera_Barat_1765321492008.csv  Pos_Pengungsian_Bencana_Sumatra_-_Sumatera_Utara_1765321492009.csv
docs/: replit.md  server-deployment.md
scripts/python/: item_categorize.py  main.py  ocr_screen.py  process_pmi.py  process_pmi_new.py  pyproject.toml  run_pipeline_pmi.py  send-to-deepseek.py  send-to-gemini.py  send_to_bytedance.py  send_to_deepseek.py  send_to_openai.py  send_to_qwen.py  step1-screenshots.py  step2-stitch.py  step3-ocr.py  step4-deepseek.py  stitch-vertical.py
scripts/python/output/: final_stock_pmi.txt  stock_pmi.json  template_stock_pmi.txt
(+39 files in other folders)
